# image-check

./: .gitignore  CLAUDE.md  README.md  image-check-conversation.md  pinkbike-verification-poc.md  pyproject.toml
src/ic/: cli.py  models.py  settings.py  utils.py  write_video.py
src/ic/claude/: annotate.py  pipeline.py
src/ic/phash/: cli.py  harness.py  signals.py
src/ic/phash_v2/: SUMMARY.md
src/ic/stega/: attacks.py  cli.py  harness.py  watermark.py
src/ic/video/: CLAUDE.md  cli.py  exif.py  models.py  parallax.py  pipeline.py  settings.py  simple.py  utils.py  viewpoints.py  webdemo.py
